--- a/package.json
+++ b/package.json
@@ -1,87 +1,87 @@
 {
-    "name": "electron-exp",
-    "productName": "electron-exp",
-    "version": "1.0.0",
-    "description": "My Electron application description",
-    "main": ".webpack/main",
-    "scripts": {
-        "start": "electron-forge start",
-        "package": "electron-forge package",
-        "make": "electron-forge make",
-        "publish": "electron-forge publish",
-        "lint": "echo \"No linting configured\""
-    },
-    "keywords": [],
-    "author": "django-wong",
-    "license": "MIT",
-    "config": {
-        "forge": {
-            "packagerConfig": {},
-            "makers": [
-                {
-                    "name": "@electron-forge/maker-squirrel",
-                    "config": {
-                        "name": "electron_exp"
-                    }
-                },
-                {
-                    "name": "@electron-forge/maker-zip",
-                    "platforms": [
-                        "darwin"
-                    ]
-                },
-                {
-                    "name": "@electron-forge/maker-deb",
-                    "config": {}
-                },
-                {
-                    "name": "@electron-forge/maker-rpm",
-                    "config": {}
-                }
-            ],
-            "plugins": [
-                [
-                    "@electron-forge/plugin-webpack",
-                    {
-                        "mainConfig": "./webpack.main.config.js",
-                        "renderer": {
-                            "config": "./webpack.renderer.config.js",
-                            "entryPoints": [
-                                {
-                                    "html": "./src/index.html",
-                                    "js": "./src/renderer.ts",
-                                    "name": "main_window"
-                                }
-                            ]
-                        }
-                    }
-                ]
-            ]
+  "name": "electron-exp",
+  "productName": "electron-exp",
+  "version": "1.0.0",
+  "description": "My Electron application description",
+  "main": ".webpack/main",
+  "scripts": {
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "echo \"No linting configured\""
+  },
+  "keywords": [],
+  "author": "django-wong",
+  "license": "MIT",
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "electron_exp"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
         }
-    },
-    "dependencies": {
-        "electron-squirrel-startup": "^1.0.0",
-        "vue": "^2.6.10",
-        "vue-router": "^3.0.7"
-    },
-    "devDependencies": {
-        "@electron-forge/cli": "^6.0.0-beta.39",
-        "@electron-forge/maker-deb": "^6.0.0-beta.39",
-        "@electron-forge/maker-rpm": "^6.0.0-beta.39",
-        "@electron-forge/maker-squirrel": "^6.0.0-beta.39",
-        "@electron-forge/maker-zip": "^6.0.0-beta.39",
-        "@electron-forge/plugin-webpack": "^6.0.0-beta.39",
-        "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
-        "copy-webpack-plugin": "^5.0.3",
-        "electron": "5.0.6",
-        "eslint": "^6.0.1",
-        "eslint-plugin-html": "^6.0.0",
-        "eslint-plugin-vue": "^5.2.3",
-        "node-loader": "^0.6.0",
-        "source-map-loader": "^0.2.4",
-        "ts-loader": "^6.0.4",
-        "typescript": "^3.5.3",
-        "vue-loader": "^15.7.0",
-        "vue-template-compiler": "^2.6.10"
+      ],
+      "plugins": [
+        [
+          "@electron-forge/plugin-webpack",
+          {
+            "mainConfig": "./webpack.main.config.js",
+            "renderer": {
+              "config": "./webpack.renderer.config.js",
+              "entryPoints": [
+                {
+                  "html": "./app/renderer/index.html",
+                  "js": "./app/renderer/index.ts",
+                  "name": "main_window"
+                }
+              ]
+            }
+          }
+        ]
+      ]
     }
+  },
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6"
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.50",
+    "@electron-forge/maker-deb": "^6.0.0-beta.50",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.50",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.50",
+    "@electron-forge/maker-zip": "^6.0.0-beta.50",
+    "@electron-forge/plugin-webpack": "^6.0.0-beta.50",
+    "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "electron": "^8.0.3",
+    "eslint": "^6.8.0",
+    "eslint-plugin-html": "^6.0.0",
+    "eslint-plugin-vue": "^6.2.1",
+    "node-loader": "^0.6.0",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.8.3",
+    "vue-loader": "^15.9.0",
+    "vue-template-compiler": "^2.6.11"
+  }
 }
